infra/k8s-dev/mailer-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailer-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailer
  template:
    metadata:
      labels:
        app: mailer
    spec:
      containers:
        - name: mailer
          image: theocosmin/mailer
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            failureThreshold: 3
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: mailer-srv
spec:
  selector:
    app: mailer
  ports:
    - name: mailer
      protocol: TCP
      port: 3000
      targetPort: 3000
