infra/k8s-dev/social-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: social
  template:
    metadata:
      labels:
        app: social
    spec:
      containers:
        - name: social
          image: theocosmin/social
          resources:
            requests:
              memory: '250Mi'
              cpu: 200m
            limits:
              memory: '1000Mi'
              cpu: 1000m
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            failureThreshold: 6
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /health
              port: 3000
            failureThreshold: 18
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: social-srv
  labels:
    app: social
spec:
  selector:
    app: social
  ports:
    - name: social
      protocol: TCP
      port: 3000
      targetPort: 3000
