infra/k8s-dev/userprofile-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
        - name: userprofile
          image: theocosmin/userprofile
          resources:
            requests:
              memory: '250Mi'
              cpu: 200m
            limits:
              memory: '1000Mi'
              cpu: 1000m
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            failureThreshold: 6
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /health
              port: 3000
            failureThreshold: 18
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: userprofile-srv
spec:
  selector:
    app: userprofile
  ports:
    - name: userprofile
      protocol: TCP
      port: 3000
      targetPort: 3000
